# webgpu-compute-exploration

./: .gitignore  README.md  index.html  package.json
js/: main.js  webgpu-utils.js
js/examples/: image-blur.js  matrix-multiplication.js  molecular-dynamics.js  vector-addition.js  wasm-mandelbrot.js
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
