[package]
name = "webgpu-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuBuffer",
    "GpuBufferUsage",
    "GpuShaderModule",
    "GpuBindGroupLayout",
    "GpuBindGroup",
    "GpuComputePipeline",
    "GpuCommandEncoder",
    "GpuComputePassEncoder",
    "GpuQueue",
    "GpuMapMode",
] }
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "z"
lto = true
